oem/ingress/deployments/prod/svc-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-nginx
spec:
  type: NodePort
  ports:
  - port: 80
    name: http
  - port: 443
    name: https
  selector:
    app: nginx-ingress-rc
